fix: display on small devices

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -44,7 +44,7 @@ BlinkMacSystemFont,
 'Droid Sans',
 'Helvetica Neue',
 sans-serif;
-$font-size: 16rem;
+$font-size: 16px;
 $font__code:"Fira Code",
 "Cascadia Code",
 Monaco,
