--- a/assets/sass/content/_content.scss
+++ b/assets/sass/content/_content.scss
@@ -30,7 +30,7 @@
 		padding: 1em;
 		padding-bottom: 1em;
 	}
-	
+
 	.entry-header {
 		z-index: 20;
 	}
@@ -317,21 +317,19 @@
 
 .site-main .template-summary {
 	padding: 1em 1em 0 1em;
-	// display: flex;
-	// flex-wrap: wrap;
-	// align-items: center;
 	display: grid;
 	grid-template-columns: 44% auto;
 	grid-template-rows: ($thumb-height / 2);
-	grid-template-areas: 
-		"thumbnail title title"
-		"thumbnail summary summary"
+	grid-template-areas:
+		"thumbnail title"
+		"thumbnail summary"
 	;
 	border: 1px solid $grey;
 	margin: 1em;
 	padding: 0;
 	border-radius: 3px;
 	box-shadow: 0 0 10px rgba(62, 70, 79, .22);
+	overflow: hidden;
 
 	.edit-link {
 		position: absolute;
@@ -342,13 +340,18 @@
 	&:hover {
 		border-color: $black;
 	}
-	
+
 	.post-thumbnail-container {
 		grid-area: thumbnail;
+
+		a {
+			display: block;
+		}
 
 		img {
 			object-fit: cover;
 			height: $thumb-height;
+			width: 100%;
 		}
 
 		.no-thumbnail {
@@ -369,7 +372,7 @@
 			margin-top: 0.75em;
 			word-wrap: break-word;
 			background: white;
-			box-shadow: 0px 20px 20px 0px rgba(255,255,255,0.75);
+			box-shadow: 0px 20px 20px 0px rgba(255, 255, 255, 0.75);
 		}
 	}
 
@@ -378,12 +381,9 @@
 		color: #777;
 		font-size: 0.8em;
 		overflow: hidden;
-  		max-height: ($thumb-height / 2);
-		// max-width: 57%;
-		// position: absolute;
-		// right: 0;
-		// bottom: 0;
-		p { 
+		max-height: ($thumb-height / 2);
+
+		p {
 			padding: 0.75em 1em 1em 1.2em;
 			margin: 0;
 		}
@@ -395,6 +395,19 @@
 
 	.entry-footer {
 		display: none;
+	}
+}
+
+@media screen and (max-width: 530px) {
+	.site-main .template-summary {
+		display: grid;
+		grid-template-columns: auto;
+		grid-template-rows: $thumb-height auto auto;
+		grid-template-areas:
+			"thumbnail"
+			"title"
+			"summary"
+		;
 	}
 }
 
