--- a/style.css
+++ b/style.css
@@ -550,7 +550,7 @@ select {
 --------------------------------------------------------------*/
 body {
 	font-family: "Fira Sans", "Charter", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Droid Sans", "Helvetica Neue", sans-serif;
-	font-size: 16rem;
+	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.61803;
 	color: #222;
@@ -594,15 +594,15 @@ var {
 h1,
 .site-title,
 .entry-title {
-	font-size: 36.24396rem;
+	font-size: 4vh;
 }
 
 h2 {
-	font-size: 28.4774rem;
+	font-size: 28.4774px;
 }
 
 h3 {
-	font-size: 23.29969rem;
+	font-size: 23.29969px;
 }
 
 /*--------------------------------------------------------------
@@ -2390,12 +2390,13 @@ a:active {
 	display: grid;
 	grid-template-columns: 44% auto;
 	grid-template-rows: 110px;
-	grid-template-areas: "thumbnail title title" "thumbnail summary summary";
+	grid-template-areas: "thumbnail title" "thumbnail summary";
 	border: 1px solid #a9b4c0;
 	margin: 1em;
 	padding: 0;
 	border-radius: 3px;
 	box-shadow: 0 0 10px rgba(62, 70, 79, 0.22);
+	overflow: hidden;
 }
 
 .site-main .template-summary .edit-link {
@@ -2412,9 +2413,14 @@ a:active {
 	grid-area: thumbnail;
 }
 
+.site-main .template-summary .post-thumbnail-container a {
+	display: block;
+}
+
 .site-main .template-summary .post-thumbnail-container img {
 	object-fit: cover;
 	height: 220px;
+	width: 100%;
 }
 
 .site-main .template-summary .post-thumbnail-container .no-thumbnail {
@@ -2429,7 +2435,7 @@ a:active {
 }
 
 .site-main .template-summary .entry-header .entry-title {
-	font-size: 23.29969rem;
+	font-size: 23.29969px;
 	margin-top: 0.75em;
 	word-wrap: break-word;
 	background: white;
@@ -2455,6 +2461,15 @@ a:active {
 
 .site-main .template-summary .entry-footer {
 	display: none;
+}
+
+@media screen and (max-width: 530px) {
+	.site-main .template-summary {
+		display: grid;
+		grid-template-columns: auto;
+		grid-template-rows: 220px auto auto;
+		grid-template-areas: "thumbnail" "title" "summary";
+	}
 }
 
 .search-no-results .site-content .container,
